; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_compaction.c_suitable_migration_target.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_compaction.c_suitable_migration_target.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@MIGRATE_ISOLATE = common dso_local global i32 0, align 4
@MIGRATE_RESERVE = common dso_local global i32 0, align 4
@pageblock_order = common dso_local global i64 0, align 8
@MIGRATE_MOVABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.page*)* @suitable_migration_target to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @suitable_migration_target(%struct.page* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.page*, align 8
  %4 = alloca i32, align 4
  store %struct.page* %0, %struct.page** %3, align 8
  %5 = load %struct.page*, %struct.page** %3, align 8
  %6 = call i32 @get_pageblock_migratetype(%struct.page* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @MIGRATE_ISOLATE, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %14, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @MIGRATE_RESERVE, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10, %1
  store i32 0, i32* %2, align 4
  br label %31

15:                                               ; preds = %10
  %16 = load %struct.page*, %struct.page** %3, align 8
  %17 = call i64 @PageBuddy(%struct.page* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %15
  %20 = load %struct.page*, %struct.page** %3, align 8
  %21 = call i64 @page_order(%struct.page* %20)
  %22 = load i64, i64* @pageblock_order, align 8
  %23 = icmp sge i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %19
  store i32 1, i32* %2, align 4
  br label %31

25:                                               ; preds = %19, %15
  %26 = load i32, i32* %4, align 4
  %27 = load i32, i32* @MIGRATE_MOVABLE, align 4
  %28 = icmp eq i32 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  store i32 1, i32* %2, align 4
  br label %31

30:                                               ; preds = %25
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %29, %24, %14
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @get_pageblock_migratetype(%struct.page*) #1

declare dso_local i64 @PageBuddy(%struct.page*) #1

declare dso_local i64 @page_order(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
